--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -35,8 +35,9 @@ which = "4.2"
 
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
 num_cpus = "1"
-tui = { path = "../helix-tui", package = "helix-tui", default-features = false, features = ["crossterm"] }
+tui = { path = "../helix-tui", package = "helix-tui" }
 crossterm = { version = "0.23", features = ["event-stream"] }
+termwiz = "0.15"
 signal-hook = "0.3"
 tokio-stream = "0.1"
 futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
