--- a/helix-tui/Cargo.toml
+++ b/helix-tui/Cargo.toml
@@ -12,14 +12,12 @@ repository = "https://github.com/helix-editor/helix"
 homepage = "https://helix-editor.com"
 include = ["src/**/*", "README.md"]
 
-[features]
-default = ["crossterm"]
-
 [dependencies]
 bitflags = "1.3"
 cassowary = "0.3"
 unicode-segmentation = "1.9"
 crossterm = { version = "0.23", optional = true }
+termwiz = "0.15"
 serde = { version = "1", "optional" = true, features = ["derive"]}
 helix-view = { version = "0.6", path = "../helix-view", features = ["term"] }
 helix-core = { version = "0.6", path = "../helix-core" }
