--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -33,6 +33,7 @@ anyhow = "1"
 once_cell = "1.10"
 
 which = "4.2"
+ropey = { version = "1.4", default-features = false }
 
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
 num_cpus = "1"
