--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -15,7 +15,8 @@ include = ["src/**/*", "README.md"]
 [dependencies]
 helix-loader = { version = "0.6", path = "../helix-loader" }
 
-ropey = "1.3"
+# ropey = "1.3"
+ropey = { git = "https://github.com/cessen/ropey" }
 smallvec = "1.8"
 smartstring = "1.0.0"
 unicode-segmentation = "1.9"
