fetch and compile tree-sitter grammars in helix-term build
This restores much of the behavior that existed before this PR:
helix will build the grammars when compiling. The difference is that
now fetching is also done during the build phase and is done much
more quickly - both shallow and in parallel.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,27 +77,14 @@ jobs:
           path: target
           key: ${{ runner.os }}-v2-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Copy minimal languages config
+        run: cp .github/workflows/languages.toml ./languages.toml
+
       - name: Cache test tree-sitter grammar
         uses: actions/cache@v2.1.7
         with:
           path: runtime/grammars
-          key: ${{ runner.os }}-v2-tree-sitter-grammars-${{ hashFiles('**/Cargo.lock') }}
-
-      - run: cp .github/workflows/languages.toml ./languages.toml
-
-      - name: Download test tree-sitter grammar
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.cross }}
-          command: run
-          args: -- --fetch-grammars
-
-      - name: Build test tree-sitter grammar
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.cross }}
-          command: run
-          args: -- --build-grammars
+          key: ${{ runner.os }}-v2-tree-sitter-grammars-${{ hashFiles('languages.toml') }}
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
