Add support for HCL language
Queries based on the neovims ones: https://github.com/nvim-treesitter/nvim-treesitter/tree/master/queries/hcl and modified for helix support.

--- a/.gitmodules
+++ b/.gitmodules
@@ -234,3 +234,7 @@
 	path = helix-syntax/languages/tree-sitter-kotlin
 	url = https://github.com/fwcd/tree-sitter-kotlin.git
 	shallow = true
+[submodule "helix-syntax/languages/tree-sitter-hcl"]
+	path = helix-syntax/languages/tree-sitter-hcl
+	url = https://github.com/MichaHoffmann/tree-sitter-hcl.git
+	shallow = true
