Add an optimised release profile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ split-debuginfo = "unpacked"
 [profile.release]
 lto = "thin"
 # debug = true
+
+[profile.opt]
+inherits = "release"
+lto = "fat"
+codegen-units = 1
+# strip = "debuginfo" # TODO: or strip = true
+opt-level = 3
