--- a/languages.toml
+++ b/languages.toml
@@ -762,7 +762,9 @@ language-server = { command = "kotlin-language-server" }
 name = "hcl"
 scope = "source.hcl"
 injection-regex = "(hcl|tf)"
-file-types = ["hcl", "tf"]
+file-types = ["hcl", "tf", "tfvars"]
 roots = []
 comment-token = "#"
 indent = { tab-width = 2, unit = "  " }
+language-server = { command = "terraform-ls", args = ["serve"] }
+auto-format = true
