Fix cachix.yml definition

--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -1,7 +1,9 @@
 # Publish the Nix flake outputs to Cachix
 name: Cachix
 on:
-  push: master
+  push:
+    branches:
+      - master
 
 jobs:
   publish:
