--- a/languages.toml
+++ b/languages.toml
@@ -833,7 +833,7 @@ name = "git-commit"
 source = { git = "https://github.com/the-mikedavis/tree-sitter-git-commit", rev = "7ae23de633de41f8f5b802f6f05b6596df6d00c1" }
 
 [[language]]
-name = "git-diff"
+name = "diff"
 scope = "source.diff"
 roots = []
 file-types = ["diff"]
@@ -842,8 +842,8 @@ comment-token = "#"
 indent = { tab-width = 2, unit = "  " }
 
 [[grammar]]
-name = "git-diff"
-source = { git = "https://github.com/the-mikedavis/tree-sitter-git-diff", rev = "c12e6ecb54485f764250556ffd7ccb18f8e2942b" }
+name = "diff"
+source = { git = "https://github.com/the-mikedavis/tree-sitter-diff", rev = "ca750e5bbc86e5716ccf4eb9e44493b14043ec4c" }
 
 [[language]]
 name = "git-rebase"
