--- a/languages.toml
+++ b/languages.toml
@@ -79,7 +79,7 @@ source = { git = "https://github.com/yusdacra/tree-sitter-protobuf", rev = "19c2
 name = "elixir"
 scope = "source.elixir"
 injection-regex = "elixir"
-file-types = ["ex", "exs"]
+file-types = ["ex", "exs", "mix.lock"]
 shebangs = ["elixir"]
 roots = []
 comment-token = "#"
@@ -88,7 +88,7 @@ indent = { tab-width = 2, unit = "  " }
 
 [[grammar]]
 name = "elixir"
-source = { git = "https://github.com/elixir-lang/tree-sitter-elixir", rev = "f5d7bda543da788bd507b05bd722627dde66c9ec"  }
+source = { git = "https://github.com/elixir-lang/tree-sitter-elixir", rev = "a11a686303355a518b0a45dea7c77c5eebb5ec22"  }
 
 [[language]]
 name = "fish"
