--- a/runtime/themes/solarized_dark.toml
+++ b/runtime/themes/solarized_dark.toml
@@ -60,9 +60,9 @@
 "ui.help" = { modifiers = ["reversed"] }
 
 # 快捷键窗口 
-"ui.info" = { bg = "base1" }
+"ui.popup.info" = { bg = "base1" }
 # 快捷键字体
-"ui.info.text" = {fg = "base02", modifiers = ["bold"]}
+"ui.text.info" = {fg = "base02", modifiers = ["bold"]}
 
 # 普通ui的字体样式
 "ui.text" = { fg = "base1" }
