Add helix-term as default-members

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ members = [
   "xtask",
 ]
 
+default-members = [
+  "helix-term"
+]
+
 # Build helix-syntax in release mode to make the code path faster in development.
 # [profile.dev.package."helix-syntax"]
 # opt-level = 3
