--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -30,6 +30,8 @@ helix-dap = { version = "0.6", path = "../helix-dap" }
 anyhow = "1"
 once_cell = "1.10"
 
+which = "4.2"
+
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
 num_cpus = "1"
 tui = { path = "../helix-tui", package = "helix-tui", default-features = false, features = ["crossterm"] }
