--- a/helix-vcs/Cargo.toml
+++ b/helix-vcs/Cargo.toml
@@ -13,6 +13,7 @@ homepage = "https://helix-editor.com"
 [dependencies]
 git2 = { version = "0.13", default-features = false }
 similar = "2.1"
+ropey = "1.3"
 
 [dev-dependencies]
 tempfile = "3.3"
