--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -61,6 +61,7 @@ toml = "0.5"
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_ignored = "0.1.2"
 
 # ripgrep for global search
 grep-regex = "0.1.9"
