--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -40,6 +40,7 @@ crossterm = { version = "0.23", features = ["event-stream"] }
 signal-hook = "0.3"
 tokio-stream = "0.1"
 futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
+arc-swap = { version = "1.5.0" }
 
 # Logging
 fern = "0.6"
