--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -25,6 +25,8 @@ crossterm = { version = "0.23", optional = true }
 once_cell = "1.10"
 url = "2"
 
+arc-swap = { version = "1.5.0" }
+
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
 tokio-stream = "0.1"
 futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
