--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -11,12 +11,13 @@ homepage = "https://helix-editor.com"
 include = ["src/**/*", "README.md"]
 
 [features]
+unicode-lines = ["ropey/unicode_lines"]
 
 [dependencies]
 helix-loader = { version = "0.6", path = "../helix-loader" }
 
 # ropey = "1.3"
-ropey = { git = "https://github.com/cessen/ropey" }
+ropey = { git = "https://github.com/cessen/ropey", default-features = false, features = ["cr_lines"] }
 smallvec = "1.8"
 smartstring = "1.0.0"
 unicode-segmentation = "1.9"
