--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -17,7 +17,7 @@ unicode-lines = ["ropey/unicode_lines"]
 helix-loader = { version = "0.6", path = "../helix-loader" }
 
 # ropey = "1.3"
-ropey = { git = "https://github.com/cessen/ropey", default-features = false, features = ["cr_lines"] }
+ropey = { git = "https://github.com/cessen/ropey", default-features = false }
 smallvec = "1.8"
 smartstring = "1.0.0"
 unicode-segmentation = "1.9"
