--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -16,8 +16,7 @@ unicode-lines = ["ropey/unicode_lines"]
 [dependencies]
 helix-loader = { version = "0.6", path = "../helix-loader" }
 
-# ropey = "1.3"
-ropey = { git = "https://github.com/cessen/ropey", default-features = false }
+ropey = { version = "1.4", default-features = false }
 smallvec = "1.8"
 smartstring = "1.0.0"
 unicode-segmentation = "1.9"
