Temporarily turn on unicode-lines
Ropey's non-unicode lines impl has some bugs still

--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -11,6 +11,7 @@ homepage = "https://helix-editor.com"
 include = ["src/**/*", "README.md"]
 
 [features]
+default = ["unicode-lines"]
 unicode-lines = ["ropey/unicode_lines"]
 
 [dependencies]
