--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -16,6 +16,8 @@ build = true
 app = true
 
 [features]
+default = ["unicode-lines"]
+unicode-lines = ["helix-core/unicode-lines"]
 
 [[bin]]
 name = "hx"
