Fix suspend when running hx within git
When editing git commit message using helix, when ctrl-z is pressed
the terminal will get stuck since helix does not suspend correctly,
as helix is currently using tokio with multi-threads, with signal-hook
default low_level::emulate_default_handler it only send the SIGSTOP to
the current process but tokio uses multi-process so not everything gets
suspended and the terminal also gets stuck.

Now switched to use libc kill function and send it to pid 0 so that all
processes gets suspended correctly.

--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -67,6 +67,7 @@ grep-searcher = "0.1.8"
 
 # Remove once retain_mut lands in stable rust
 retain_mut = "0.1.7"
+nix = "0.23"
 
 [target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
