--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -36,6 +36,7 @@ slotmap = "1"
 chardetng = "0.1"
 
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.5"
 log = "~0.4"
 
