--- a/runtime/themes/bogster.toml
+++ b/runtime/themes/bogster.toml
@@ -56,6 +56,7 @@
 
 "ui.selection" = { bg = "#313f4e" }
 # "ui.cursor.match"  # TODO might want to override this because dimmed is not widely supported
+"ui.cursor.match" = { fg = "#313f4e", bg = "#dc7759" }
 "ui.cursor" = { fg = "#ABB2BF", modifiers = ["reversed"] }
 "ui.menu.selected" = { fg = "#e5ded6", bg = "#313f4e" }
 
