--- a/helix-loader/Cargo.toml
+++ b/helix-loader/Cargo.toml
@@ -15,11 +15,16 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 etcetera = "0.3"
 tree-sitter = "0.20"
-libloading = "0.7"
 once_cell = "1.9"
 
 log = "0.4"
 
+# TODO: these two should be on !wasm32 only
+
 # cloning/compiling tree-sitter grammars
 cc = { version = "1" }
 threadpool = { version = "1.0" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+libloading = "0.7"
+
