--- a/runtime/themes/tokyonight.toml
+++ b/runtime/themes/tokyonight.toml
@@ -39,6 +39,7 @@
 "ui.text" = { fg = "foreground" }
 "ui.text.focus" = { fg = "cyan" }
 "ui.window" = { fg = "black" }
+"ui.virtual" = { fg = "comment" }
 
 "error" = { fg = "red" }
 "warning" = { fg = "yellow" }
