--- a/runtime/themes/rose_pine.toml
+++ b/runtime/themes/rose_pine.toml
@@ -15,6 +15,7 @@
 "ui.text" = { fg = "text" }
 "ui.text.focus" = { fg = "foam", modifiers = ["bold"]}
 "ui.text.info" = {fg = "pine", modifiers = ["bold"]}
+"ui.virtual" = "highlight"
 "operator" = "rose"
 "variable" = "text"
 "constant.numeric" = "iris"
