Add texlab language server for latex (#1922)

--- a/languages.toml
+++ b/languages.toml
@@ -447,6 +447,7 @@ injection-regex = "tex"
 file-types = ["tex"]
 roots = []
 comment-token = "%"
+language-server = { command = "texlab" }
 indent = { tab-width = 4, unit = "\t" }
 
 [[grammar]]
