Continue comments when opening a new line

--- a/languages.toml
+++ b/languages.toml
@@ -6,6 +6,7 @@ file-types = ["rs"]
 roots = ["Cargo.toml", "Cargo.lock"]
 auto-format = true
 comment-token = "//"
+comment-tokens = ["//", "///"]
 language-server = { command = "rust-analyzer" }
 indent = { tab-width = 4, unit = "    " }
 
