PHP roots and languageserver improvements

--- a/languages.toml
+++ b/languages.toml
@@ -428,7 +428,8 @@ scope = "source.php"
 injection-regex = "php"
 file-types = ["php"]
 shebangs = ["php"]
-roots = []
+roots = ["composer.json", "index.php"]
+language-server = { command = "intelephense", args = ["--stdio"] }
 indent = { tab-width = 4, unit = "    " }
 
 [[grammar]]
