support setting paths from config file
Final executable doesn't try to detect build
environment anymore, build env simply sets HELIX_CONFIG
envvar and supplies it's own config.toml with
build-specific paths.

Signed-off-by: Martin Matous <m@matous.dev>

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,5 @@
 [alias]
 xtask = "run --package xtask --"
+
+[env]
+HELIX_CONFIG = { value = "./runtime/config.toml", force = true, relative = true }
