--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -41,6 +41,7 @@ encoding_rs = "0.8"
 chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
 
 etcetera = "0.3"
+textwrap = "0.15.0"
 
 [dev-dependencies]
 quickcheck = { version = "1", default-features = false }
