--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -78,3 +78,4 @@ helix-loader = { version = "0.6", path = "../helix-loader" }
 [dev-dependencies]
 smallvec = "1.8"
 indoc = "1.0.3"
+tempfile = "3.3.0"
